--- a/main.html
+++ b/main.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div id="barra-branca">
+        <h1>Douglas gomes</h1>
+    </div>
+    <header>
+        <h1>aqui é o douglas</h1>
+    </header>
     
 </body>
 </html>
